--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "carlonicora/minimalism-service-auth",
   "description": "Authentication and Authorisation service for minimalism",
-  "version": "0.1.9",
+  "version": "0.2.0",
   "homepage": "https://carlonicora.com",
   "time": "2020-06-13",
   "license": "MIT",
@@ -32,7 +32,8 @@
     "carlonicora/minimalism": "~11.0",
     "carlonicora/minimalism-service-mysql": "~2.0",
     "carlonicora/minimalism-service-encrypter": "~2.0",
-    "carlonicora/minimalism-service-json-data-mapper": "~1.0"
+    "carlonicora/minimalism-service-json-data-mapper": "~1.0",
+    "carlonicora/minimalism-service-mailer": "~2.0"
   },
   "require-dev": {
     "roave/security-advisories": "dev-master",
