--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "carlonicora/minimalism-service-auth",
   "description": "Authentication and Authorisation service for minimalism",
-  "version": "0.5.0-beta2",
+  "version": "0.5.1",
   "homepage": "https://carlonicora.com",
   "time": "2020-06-13",
   "license": "MIT",
