--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
   "name": "carlonicora/minimalism-service-auth",
   "description": "Authentication and Authorisation service for minimalism",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "homepage": "https://carlonicora.com",
   "time": "2020-06-13",
   "license": "MIT",
   "type": "library",
-  "minimum-stability": "beta",
+  "minimum-stability": "stable",
   "authors": [
     {
       "name": "Carlo Nicora",
@@ -25,10 +25,10 @@
     "ext-redis": "*",
     "ext-json": "*",
     "ext-curl": "*",
-    "carlonicora/minimalism": "~11.1",
+    "carlonicora/minimalism": "~11.3",
     "carlonicora/minimalism-service-mysql": "~3.0",
     "carlonicora/minimalism-service-encrypter": "~2.0",
-    "carlonicora/minimalism-service-json-data-mapper": "2.0.0-beta6",
+    "carlonicora/minimalism-service-json-data-mapper": "~2.0",
     "carlonicora/minimalism-service-mailer": "~2.0",
     "facebook/graph-sdk":"*",
     "google/apiclient":"*"
