--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "carlonicora/minimalism-service-auth",
   "description": "Authentication and Authorisation service for minimalism",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "homepage": "https://carlonicora.com",
   "time": "2020-06-13",
   "license": "MIT",
@@ -21,19 +21,16 @@
     }
   },
   "require": {
-    "php": "^7.4",
+    "php": ">=8.0",
     "ext-redis": "*",
     "ext-json": "*",
     "ext-curl": "*",
-    "carlonicora/minimalism": "~11.3",
-    "carlonicora/minimalism-service-mysql": "~3.0",
-    "carlonicora/minimalism-service-encrypter": "~2.0",
-    "carlonicora/minimalism-service-json-data-mapper": "~2.0",
-    "carlonicora/minimalism-service-mailer": "~2.0",
+    "carlonicora/minimalism": "~12.0",
+    "carlonicora/minimalism-service-mysql": "~4.0",
+    "carlonicora/minimalism-service-encrypter": "~3.0",
+    "carlonicora/minimalism-service-jsonapi": "~3.0",
+    "carlonicora/minimalism-service-mailer": "~3.0",
     "facebook/graph-sdk":"*",
     "google/apiclient":"*"
-  },
-  "require-dev": {
-    "roave/security-advisories": "dev-master"
   }
 }
