--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "carlonicora/minimalism-service-auth",
   "description": "Authentication and Authorisation service for minimalism",
-  "version": "2.0.8",
+  "version": "2.0.9",
   "homepage": "https://carlonicora.com",
   "time": "2020-06-13",
   "license": "MIT",
@@ -28,6 +28,7 @@
     "carlonicora/minimalism": ">=12.1.11",
     "carlonicora/minimalism-service-mysql": "~4.1",
     "carlonicora/minimalism-service-encrypter": "~3.0",
+    "carlonicora/minimalism-service-jsonapi": "~3.0",
     "carlonicora/minimalism-service-mailer": "~3.0",
     "facebook/graph-sdk":"*",
     "google/apiclient":"*"
