--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
   "name": "carlonicora/minimalism-service-auth",
   "description": "Authentication and Authorisation service for minimalism",
-  "version": "2.0.4",
+  "version": "3.0.0-beta1",
   "homepage": "https://carlonicora.com",
   "time": "2020-06-13",
   "license": "MIT",
   "type": "library",
-  "minimum-stability": "stable",
+  "minimum-stability": "beta",
   "authors": [
     {
       "name": "Carlo Nicora",
@@ -25,8 +25,8 @@
     "ext-redis": "*",
     "ext-json": "*",
     "ext-curl": "*",
-    "carlonicora/minimalism": "~12.0",
-    "carlonicora/minimalism-service-mysql": "~4.0",
+    "carlonicora/minimalism": "~13.0",
+    "carlonicora/minimalism-service-mysql": "~5.0",
     "carlonicora/minimalism-service-encrypter": "~3.0",
     "carlonicora/minimalism-service-jsonapi": "~3.0",
     "carlonicora/minimalism-service-mailer": "~3.0",
