--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "carlonicora/minimalism-service-auth",
   "description": "Authentication and Authorisation service for minimalism",
-  "version": "3.0.8-beta1",
+  "version": "4.0.0-beta2",
   "homepage": "https://carlonicora.com",
   "time": "2020-06-13",
   "license": "MIT",
@@ -25,13 +25,12 @@
     "ext-redis": "*",
     "ext-json": "*",
     "ext-curl": "*",
-    "carlonicora/minimalism": "~12.3",
+    "carlonicora/minimalism": "~13.0",
     "carlonicora/minimalism-service-mysql": "~5.0",
     "carlonicora/minimalism-service-encrypter": "~3.0",
-    "carlonicora/minimalism-service-builder": "~1.1",
+    "carlonicora/minimalism-service-jsonapi": "~3.0",
     "carlonicora/minimalism-service-mailer": "~3.0",
-    "facebook/graph-sdk":"~5.1",
-    "google/apiclient":"~2.9",
-    "web-token/jwt-framework": "~2.2"
+    "facebook/graph-sdk":"*",
+    "google/apiclient":"*"
   }
 }
