--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     {
       "name": "Carlo Nicora",
       "email": "carlo@carlonicora.com",
-      "homepage": "http://carlonicora.com",
+      "homepage": "https://carlonicora.com",
       "role": "Developer"
     }
   ],
@@ -28,8 +28,10 @@
     "carlonicora/minimalism": "~13.0",
     "carlonicora/minimalism-service-mysql": "~5.0",
     "carlonicora/minimalism-service-encrypter": "~3.0",
+    "carlonicora/minimalism-service-builder": "~1.1",
     "carlonicora/minimalism-service-jsonapi": "~3.0",
     "carlonicora/minimalism-service-mailer": "~3.0",
+    "web-token/jwt-framework": "~2.2",
     "facebook/graph-sdk":"*",
     "google/apiclient":"*"
   }
