initial port to minimalism 13

--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
   "name": "carlonicora/minimalism-service-auth",
   "description": "Authentication and Authorisation service for minimalism",
-  "version": "4.0.0-beta5",
+  "version": "4.0.1-alpha1",
   "homepage": "https://carlonicora.com",
   "time": "2020-06-13",
   "license": "MIT",
   "type": "library",
-  "minimum-stability": "beta",
+  "minimum-stability": "alpha",
   "authors": [
     {
       "name": "Carlo Nicora",
@@ -25,11 +25,13 @@
     "ext-redis": "*",
     "ext-json": "*",
     "ext-curl": "*",
+    "carlonicora/jsonapi": "~3.0",
     "carlonicora/minimalism": "~13.0",
+    "carlonicora/minimalism-interface-encrypter": "~1.0",
+    "carlonicora/minimalism-interface-security": "~1.0",
     "carlonicora/minimalism-service-mysql": "~5.0",
-    "carlonicora/minimalism-service-encrypter": "~3.0",
-    "carlonicora/minimalism-service-builder": "~1.1",
-    "carlonicora/minimalism-service-jsonapi": "~3.0",
+    "carlonicora/minimalism-service-encrypter": "~4.0",
+    "carlonicora/minimalism-service-builder": "~2.0",
     "carlonicora/minimalism-service-mailer": "~3.0",
     "web-token/jwt-framework": "~2.2",
     "facebook/graph-sdk":"*",
