--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "carlonicora/minimalism-service-auth",
   "description": "Authentication and Authorisation service for minimalism",
-  "version": "4.0.1-alpha8",
+  "version": "4.1.0-alpha1",
   "homepage": "https://carlonicora.com",
   "time": "2020-06-13",
   "license": "MIT",
@@ -36,6 +36,7 @@
     "carlonicora/minimalism-service-mailer-twig": "~1.0",
     "web-token/jwt-framework": "~2.2",
     "facebook/graph-sdk":"*",
-    "google/apiclient":"*"
+    "google/apiclient":"*",
+    "phpgangsta/googleauthenticator": "dev-master"
   }
 }
