--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
   "name": "carlonicora/minimalism-service-auth",
   "description": "Authentication and Authorisation service for minimalism",
-  "version": "4.1.8",
+  "version": "5.0.0",
   "homepage": "https://carlonicora.com",
   "time": "2020-06-13",
   "license": "MIT",
   "type": "library",
-  "minimum-stability": "stable",
+  "minimum-stability": "beta",
   "authors": [
     {
       "name": "Carlo Nicora",
@@ -28,12 +28,12 @@
     "carlonicora/jsonapi": "~3.0",
     "carlonicora/minimalism": "~13.0",
     "carlonicora/minimalism-interface-encrypter": "~1.0",
-    "carlonicora/minimalism-interface-security": "~1.0",
-    "carlonicora/minimalism-service-mysql": "~5.0",
-    "carlonicora/minimalism-service-encrypter": "~4.0",
-    "carlonicora/minimalism-service-builder": "~2.0",
     "carlonicora/minimalism-interface-mailer": "~1.0",
+    "carlonicora/minimalism-service-builder": "~2.0",
+    "carlonicora/minimalism-service-encrypter": "~4.0",
     "carlonicora/minimalism-service-mailer-twig": "~1.0",
+    "carlonicora/minimalism-service-mysql": "~5.0",
+    "carlonicora/minimalism-service-oauth": "~1.0",
     "web-token/jwt-framework": "~2.2",
     "facebook/graph-sdk":"*",
     "google/apiclient":"*",
